src/styles.css
/* Impport  */


/* Fonts  */

@font-face {
  font-family: SOV_naga;
  src: url("/assets/fonts/SOV_naga.ttf");
}


/* You can add global styles to this file, and also import other style files */


/* Sticky footer styles
-------------------------------------------------- */

html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 400px;
  font-family: serifa, "Helvetica Neue";
}

nav {
  min-height: 100px;
  /* border-bottom: 1px solid lightgray; */
  font-size: 230%;
  line-height: 0.9;
  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
  font-family: SOV_naga;
  background-color: rgba(255, 255, 255, 0.8)
}

.navbar-brand {
  font-size: 300%;
}

.brand-text {
  position: relative;
  left: -10px;
  top: 5px;
}

.custom-btn-nav {
  -webkit-transition: background-color .3s ease;
  transition: background-color .3s ease;
  border-radius: 0;
  color: #000;
  background-color: #FECE00;
  text-align: left;
  font-size: 80%;
  /* margin-left: 15px; */
}

.custom-btn-nav:hover {
  background-color: #000;
  color: #fff;
}

footer.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 400px;
  background-color: #f5f5f5;
  background-image: url("/assets/bg/thai-bg.jpg");
}


/* Custom page CSS
-------------------------------------------------- */


/* Not required for template or sticky footer method. */

.container-fluid {
  padding: 0;
}

footer .container-fluid {
  height: 400px;
  background: rgba(255, 255, 255, 0.6);
}

footer.footer .container {
  padding: 20px 0;
}

footer article {
  padding: 20px 0 10px 70px;
  font-size: 180%;
}


/* Extra large devices (large desktops, 1200px and up) */

@media (min-width: 1200px) {}


/* Large devices (desktops, 992px and up) */

@media (min-width: 992px) and (max-width: 1199px) {}


/* Medium devices (tablets, 768px and up) */

@media (min-width: 768px) and (max-width: 991px) {}


/* Small devices (landscape phones, 576px and up) */

@media (min-width: 576px) and (max-width: 767px) {
  footer.footer .container {
    padding: 20px 10px;
  }
}


/* Extra small devices (portrait phones, less than 576px) */

@media (max-width: 575px) {
  footer.footer .container {
    padding: 20px 10px;
    font-size: 80%;
  }
  footer article {
    padding-left: 30px;
  }
}

